// Copyright (c) 2022 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";
package com.digitalasset.canton.protocol.v0;

import "google/protobuf/timestamp.proto";
import "com/digitalasset/canton/crypto/v0/crypto.proto";
import "com/digitalasset/canton/protocol/v0/sequencing.proto";
import "com/digitalasset/canton/time/v0/time_proof.proto";
import "com/digitalasset/canton/protocol/v0/common.proto";
import "com/digitalasset/canton/protocol/v0/merkle.proto";

// Messages sent by a participant as part of the transfer protocol

message TransferId {
    string origin_domain = 1;
    google.protobuf.Timestamp timestamp = 2;
}

message TransferOutMediatorMessage {
    TransferViewTree tree = 1;
}

message TransferInMediatorMessage {
    TransferViewTree tree = 1;
}

message TransferViewTree {
    BlindableNode common_data = 1;
    BlindableNode participant_data = 2;
}

message TransferOutCommonData {
    com.digitalasset.canton.crypto.v0.Salt salt = 1;
    string origin_domain = 2;
    repeated string stakeholders = 3;
    repeated string admin_parties = 4;
    string uuid = 5;
    string origin_mediator = 6;
}

message TransferOutView {
    com.digitalasset.canton.crypto.v0.Salt salt = 1;
    string submitter = 2;
    string contract_id = 3;
    string target_domain = 4;
    com.digitalasset.canton.time.v0.TimeProof target_time_proof = 5;
}


message TransferInCommonData {
    com.digitalasset.canton.crypto.v0.Salt salt = 1;
    string target_domain = 2;
    repeated string stakeholders = 3;
    string uuid = 4;
    string target_mediator = 6;
}

message TransferInView {
    com.digitalasset.canton.crypto.v0.Salt salt = 1;
    string submitter = 2;
    SerializableContract contract = 3;
    SignedContent transfer_out_result_event = 4;
    bytes creating_transaction_id = 5;
}
